--- a/tecnart/assets/css/style.css
+++ b/tecnart/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-  background-color: #333F50;
+  background-color: #000033;
 }
 
 .layout_padding {
@@ -160,6 +160,10 @@ a:focus {
 
 .custom_nav-container {
   padding: 0;
+}
+
+.nav-label:hover{
+  color: #002169;
 }
 
 .custom_nav-container .navbar-nav {
@@ -963,6 +967,7 @@ a:focus {
 /*# sourceMappingURL=style.css.map */
 
 .heading_container.heading_center h3 {
+  color: #002169;
   position: relative;
   margin-bottom: 15px;
   font-size: 2.5rem;
@@ -970,6 +975,7 @@ a:focus {
 }
 
 .heading_container2.heading_center2 h3 {
+  color: #002169;
   position: relative;
   margin-bottom: 15px;
   font-size: 2.5rem;
@@ -983,14 +989,14 @@ a:focus {
   display: inline-block;
   font-family: 'Merriweather Sans', sans-serif !important; 
   font-size: 33px;  
-  color:#333f50; 
+  color:#002169; 
 
 }
 
 .heading_h3{
   font-family: 'Merriweather Sans', sans-serif !important; 
   font-size: 33px;  
-  color:#333f50; 
+  color:#002169; 
 }
 
 .heading2_h5 {
@@ -1064,7 +1070,7 @@ li.nav-item ul li a {
 
 
 footer {
-    background: #333F50;
+    background: #000033;
     padding: 90px 0 70px;
 }
 
@@ -1195,7 +1201,7 @@ form input[type="submit"]:focus {
 /** cpy **/
 
 .cpy_ {
-    background: #333F50;
+    background: #002169;
     text-align: center;
     
 }
@@ -1668,7 +1674,7 @@ form input[type="submit"]:focus {
                           }
                           
                           .dropdown-content a {
-                            color: black;
+                            color: #002169;
                             padding: 12px 16px;
                             text-decoration: none;
                             display: block;
@@ -1676,7 +1682,7 @@ form input[type="submit"]:focus {
                             font-size:13px;
                           }
                           
-                          .dropdown-content a:hover {background-color: #333F50; color:#ffffff;}
+                          .dropdown-content a:hover {background-color: #002169; color:#ffffff;}
                           
                           .dropdown:hover .dropdown-content {
                             display: block;
