--- a/tecnart/assets/css/style.css
+++ b/tecnart/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 * {
   box-sizing: border-box;
@@ -94,7 +95,7 @@ h2 {
 .heading_container.heading_center {
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center;
+          align-items: flex-start;
   
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -845,6 +846,8 @@ a:focus {
     text-align: left;
 }
 
+
+
 .footer_section h4 {
   font-size: 28px;
 }
@@ -1068,14 +1071,22 @@ li.nav-item ul li a {
 
 /** footer **/
 
-
-footer {
+.footer {
     background: #000033;
-    padding: 90px 0 70px;
+    
+  
+  }
+
+.logo_footer { 
+    margin-bottom: 30px;
+    
 }
 
-.logo_footer {
-    margin-bottom: 30px;
+.container_footer {
+  background: #000033;
+  padding: 30px 150px 5px;
+  width: 100%;
+ 
 }
 
 .logo-tech_footer{
